home page update

--- a/src/core/styles/theme/variables/colors.scss
+++ b/src/core/styles/theme/variables/colors.scss
@@ -3,7 +3,7 @@
   --yellow: #fabb18;
   --yellow-hover: #e2a816;
   --white: #ffffff;
-  --grey-light: #fafafa;
+  --grey-light: #f3f3f3;
   --grey-light2: #eaeaea;
   --grey: #b9b9b9;
 }
