--- a/src/components/DashboardIdWrapper/ChartItem/ChartItem.module.scss
+++ b/src/components/DashboardIdWrapper/ChartItem/ChartItem.module.scss
@@ -3,7 +3,7 @@
   max-width: 800px;
   max-height: 400px;
   border-radius: 8px;
-  background: #fafafa;
+  background: #faffff;
   position: relative;
   padding: 24px;
   position: relative;
