--- a/src/components/HomeWrapper/HomeWrapper.module.scss
+++ b/src/components/HomeWrapper/HomeWrapper.module.scss
@@ -8,3 +8,94 @@
   justify-content: center;
   align-items: center;
 }
+
+.modal {
+  box-shadow: 3px 3px 10px 0px rgba(120, 120, 120, 0.1);
+  border-radius: 8px;
+  border: 1px solid var(--grey);
+  padding: 60px;
+
+  display: flex;
+  gap: 24px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  color: var(--black);
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.column {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.input {
+  padding: 8px 12px;
+  border-radius: 4px;
+  border: 1px solid var(--grey);
+
+  width: 100%;
+  max-width: 360px;
+  min-height: 24px;
+}
+
+.button {
+  box-shadow: 3px 3px 10px 0px rgba(120, 120, 120, 0.4);
+  border-radius: 5px;
+  background-color: var(--yellow);
+  border: none;
+  width: 100%;
+  min-height: 40px;
+  max-width: 280px;
+  cursor: pointer;
+  @include transition(background-color);
+
+  color: var(--white);
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+
+  &:hover {
+    background-color: var(--yellow-hover);
+  }
+}
+
+.separate {
+  height: 100px;
+  width: 1px;
+  background-color: grey;
+}
+
+.back {
+  display: flex;
+  width: 100%;
+  cursor: pointer;
+}
+
+.choose {
+  display: flex;
+  gap: 32px;
+  align-items: center;
+  justify-content: center;
+}
+
+.label {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+}
+
+.downloadWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+}
